<resources>
    <string name="app_name">MyFilms</string>
    <string name="title_film">TITLE</string>
    <string name="year">2020</string>
    <string name="rate">6.9</string>
    <string name="style_film">STYLE FILM</string>
    <string name="errorLoading">ERROR</string>
    <string name="reloadError">Reload</string>
    <string name="failed_to_load_films">Ошибка при загрузке</string>
    <string name="try_again">Попробовать снова</string>
    <string name="no_films">Нет фильмов</string>
    <string name="todo">TODO</string>
    <string name="image_cover_desc">Cover</string>
    <string name="connection_on">Вы подключились к сети</string>
    <string name="category_title">Категория</string>
    <string name="favorite">Избранное</string>
    <string name="see_later">Посмотреть позже</string>
    <string name="settings">Настройки</string>
    <string name="Menu">Меню</string>
    <string name="need_permission_to_read_contacts">Необходимо разрешение на чтение контактов</string>
</resources>